Correção de parâmetros

--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ COMPOSE_PROJECT_NAME=EquatorialSmartgrid
 
 # Orion variables
 ORION_PORT=1026
-ORION_VERSION=3.5.1
+ORION_VERSION=3.5.1 # Versao validada 2.1.0
 
 # MongoDB variables
 MONGO_DB_PORT=27017
@@ -21,10 +21,13 @@ IOTA_SOUTH_PORT=7896
 # MySQL variables
 MYSQL_DB_VERSION=5.7
 MYSQL_DB_PORT=3306
+MYSQL_ROOT_PASSWORD=123
+
 
 # Cygnus Variables
 CYGNUS_VERSION=2.16.0
 CYGNUS_API_PORT=5080
+CYGNUS_API_ADMIN_PORT=5081
 CYGNUS_MYSQL_SERVICE_PORT=5050
 CYGNUS_MONGO_SERVICE_PORT=5051
 CYGNUS_CKAN_SERVICE_PORT=5052
@@ -35,3 +38,14 @@ CYGNUS_ORION_SERVICE_PORT=5056
 CYGNUS_POSTGIS_SERVICE_PORT=5057
 CYGNUS_ELASTICSEARCH_SERVICE_PORT=5058
 CYGNUS_ARCGIS_SERVICE_PORT=5059
+CYGNUS_MYSQL_USER=root
+CYGNUS_MYSQL_PASS=123
+
+# Mosquitto Variables
+MOSQUITTO_VERSION=1.6.14
+MOSQUITTO_NORTH_PORT=1883
+MOSQUITTO_SOUTH_PORT=9001
+
+# Portainer Variables
+PORTAINER_NORTH_PORT=9000
+PORTAINER_SOUTH_PORT=572
