--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ COMPOSE_PROJECT_NAME=EquatorialSmartgrid
 
 # Orion variables
 ORION_PORT=1026
-ORION_VERSION=3.5.1 # Versao validada 2.1.0
+ORION_VERSION=3.5.1
 
 # MongoDB variables
 MONGO_DB_PORT=27017
