--- a/multiple.yml
+++ b/multiple.yml
@@ -147,7 +147,8 @@ services:
     volumes:
       - ./mosquitto/mosquitto.conf:/mosquitto/config/mosquitto.conf
     persistence: true
-    persistence_location: /mosquitto/data/
+    persistence_location:
+      - /mosquitto/data/
     networks:
       - default
     restart: always
