--- a/multiple.yml
+++ b/multiple.yml
@@ -129,7 +129,7 @@ services:
       - "MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}"
       - "MYSQL_ROOT_HOST=%"
     volumes:
-      - mysql-db:/var/lib/mysql
+      - ./mysql-db:/var/lib/mysql
     restart: always
 
 
