--- a/multiple.yml
+++ b/multiple.yml
@@ -67,10 +67,10 @@ services:
       - default
     expose:
       - ${IOTA_NORTH_PORT}
-    # - ${IOTA_SOUTH_PORT}
+      - ${IOTA_SOUTH_PORT}
     ports:
       - ${IOTA_NORTH_PORT}:${IOTA_NORTH_PORT} # localhost:4041
-    # - ${IOTA_SOUTH_PORT}:${IOTA_SOUTH_PORT} # localhost:7896
+      - ${IOTA_SOUTH_PORT}:${IOTA_SOUTH_PORT} # localhost:7896
     environment:
       - IOTA_CB_HOST=orion # name of the context broker to update context
       - IOTA_CB_PORT=${ORION_PORT} # port the context broker listens on to update context
